# recursive-sync-tia

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
program-verify-consensus-recursion/: Cargo.toml
program-verify-consensus-recursion/src/: main.rs
runner-verify-consensus-recursion/: Cargo.toml  build.rs
runner-verify-consensus-recursion/src/: main.rs
scraper/: Cargo.toml  README.md
scraper/src/: lib.rs  tm_rpc_types.rs  tm_rpc_utils.rs
