[workspace]
members = [
    "program-verify-consensus-recursion",
    "runner-verify-consensus-recursion",
    "scraper",
    "common"
]
resolver = "2"
default-members = ["scraper"]

[workspace.dependencies]
# SP1 dependencies
sp1-sdk = "5.0.8"
sp1-zkvm = "5.0.8"
sp1-build = "5.0.8"
sp1-verifier = "5.0.8"

sha2 = "0.10.9"

common = { path = "common" }

# Tendermint dependencies
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = ["rust-crypto"] }
tendermint = { version = "0.35.0", default-features = false }

# Serialization
serde_json = { version = "1.0", default-features = false }
serde = { version = "1.0.200", default-features = false }
serde_cbor = "0.11.2"

# SP1 uses this out-of-date version
bincode = "1.3.3"

# CLI and utilities
clap = { version = "4.5.50", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
subtle-encoding = "0.5.1"

[patch.crates-io]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-16.9-sp1-4.1.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-5.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.30.0-sp1-5.0.0" }