[package]
version = "0.1.0"
name = "program-verify-consensus-recursion"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true, features = ["verify"] }
serde_cbor = "0.11.2"
bincode = "2.0.1"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
tendermint-light-client-verifier = { workspace = true, features = ["rust-crypto"] }
sha2 = { workspace = true }
common = { workspace = true }