[package]
version = "0.1.0"
name = "runner-verify-consensus-recursion"
edition = "2021"

[[bin]]
name = "prove_from_headers_dir"
path = "src/bin/prove_from_headers_dir.rs"

[[bin]]
name = "run_program"
path = "src/bin/run_program.rs"

[dependencies]
sp1-sdk = { workspace = true , default-features = false }
serde_json = { workspace = true, features = ["alloc"] }
serde_cbor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
hex = { workspace = true }
dotenv = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint = { workspace = true }
common = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
